@@ -1,5 +1,5 @@
 <?
-global $LoggedUser;
+global $LoggedUser, $SSL;
 define('FOOTER_FILE',SERVER_ROOT.'/design/publicfooter.php');
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
