@@ -369,7 +369,7 @@ show_header('Uploading Rules');
 			<li id="r2.3.1"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.1">2.3.1.</a> <strong>Music releases must be in a directory containing the music.</strong> No music contained in an archive (e.g. .rar, .zip, .tar, .iso). Scene archives of music must be unpacked and not labeled as "scene." <u>Exceptions</u>: There is no need for a directory for a torrent that consists of a single file (and is not an archive!).
 			</li>
 
-			<li id="r2.3.2"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.2">2.3.2.</a> <strong>Name your directories with meaningful titles, such as "Artist - Year - Album."</strong> We advise that directory names in your uploads should at least be "Artist - Year - Album." Naming folders with only the format name (e.g. "flac") makes it difficult for downloaders to locate their files. However, this is not enforced and is not grounds for reporting a torrent. Avoid creating unnecessary nested folders (such as an extra folder for the actual album) inside your properly named directory. Nested folders make it less likely that downloaders leave the torrent unchanged in order to stay seeding.
+			<li id="r2.3.2"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.2">2.3.2.</a> <strong>Name your directories with meaningful titles, such as "Artist - Album (Year) - Format."</strong> We advise that directory names in your uploads should at least be "Artist - Album (Year) - Format". The minimum acceptable is "Album", although it is preferable to include more information. If the directory name does not include this minimum then another user can rename the directory, re-upload and report yours for deletion. Avoid creating unnecessary nested folders (such as an extra folder for the actual album) inside your properly named directory. Nested folders make it less likely that downloaders leave the torrent unchanged in order to stay seeding. 
 			</li>
 			<li id="r2.3.3"><a href="#h2.3"><strong>&uarr;_</strong></a> <a href="#r2.3.3">2.3.3.</a> <strong>Label your torrents according to standards.</strong> Follow <a href="wiki.php?action=article&amp;id=159">the torrent naming guide</a> for help on how to name your uploaded torrents properly. Note that soundboards, EPs, LPs. singles, special characters, and releases with various artists have special naming standards here. Use the <em>Edition Information</em> box on the <a href="upload.php">upload page</a> to denote different editions or versions of an album (e.g. censored version versus an uncensored version). Do not add genre tags like [Australia] or [K-Pop] to your album title. Those belong as <a href="rules.php?p=tag">Gazelle tags</a>. If you need help merging or editing your upload, <a href="forums.php?action=viewthread&amp;threadid=12006&amp;page=1">request it at this thread</a>. For the album category/release type, follow the <a href="wiki.php?action=article&amp;id=202">guidelines here</a>.
 			</li>
