@@ -62,7 +62,10 @@ show_header('Search articles');
 	</div>
 	<div class="center">
 		<form action="" method="get">
-			<div><input type="hidden" name="action" value="search" /></div>
+			<div>
+				<input type="hidden" name="action" value="search" />
+				<input type="hidden" name="nojump" value="1" />
+			</div>
 			<table cellpadding="6" cellspacing="1" border="0" class="border" width="100%">
 				<tr>
 					<td class="label"><strong>Search for:</strong></td>
